Adds team border

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <main>
       <!-- Hero -->
-      <div class="container">
+      <div class="container hero-image">
         <section class="hero">
           <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
           <button type="button" class="main-button">Заказать услугу</button>
@@ -158,123 +158,135 @@
           <ul class="team list">
             <li class="item">
               <img
+                class="image-block"
                 src="./img/team/john.jpg"
                 alt="Николай Кучеренко"
                 width="270"
                 height="260"
               />
-              <h3 class="title">Николай Кучеренко</h3>
-              <p class="profession">Product Designer</p>
-              <ul class="network list network-flex">
-                <li>
-                  <a href="#" aria-label="Ссылка на Instagram" class="link"
-                    >Ins</a
-                  >
-                </li>
-                <li>
-                  <a href="#" aria-label="Ссылка на Twitter" class="link">Tw</a>
-                </li>
-                <li>
-                  <a href="#" aria-label="Ссылка на Facebook" class="link"
-                    >FB</a
-                  >
-                </li>
-                <li>
-                  <a href="#" aria-label="Ссылка на LinkedIn" class="link"
-                    >LIn</a
-                  >
-                </li>
-              </ul>
+              <div class="team-border">
+                <h3 class="title">Николай Кучеренко</h3>
+                <p class="profession">Product Designer</p>
+                <ul class="network list network-flex">
+                  <li>
+                    <a href="#" aria-label="Ссылка на Instagram" class="link"
+                      >Ins</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#" aria-label="Ссылка на Twitter" class="link">Tw</a>
+                  </li>
+                  <li>
+                    <a href="#" aria-label="Ссылка на Facebook" class="link"
+                      >FB</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#" aria-label="Ссылка на LinkedIn" class="link"
+                      >LIn</a
+                    >
+                  </li>
+                </ul>
+              </div>
             </li>
             <li>
               <img
+                class="image-block"
                 src="./img/team/marta.jpg"
                 alt="Ольга Иванова"
                 width="270"
                 height="260"
               />
-              <h3 class="title">Ольга Иванова</h3>
-              <p class="profession">Frontend Developer</p>
-              <ul class="network list network-flex">
-                <li>
-                  <a href="#" aria-label="Ссылка на Instagram" class="link"
-                    >Ins</a
-                  >
-                </li>
-                <li>
-                  <a href="#" aria-label="Ссылка на Twitter" class="link">Tw</a>
-                </li>
-                <li>
-                  <a href="#" aria-label="Ссылка на Facebook" class="link"
-                    >FB</a
-                  >
-                </li>
-                <li>
-                  <a href="#" aria-label="Ссылка на LinkedIn" class="link"
-                    >LIn</a
-                  >
-                </li>
-              </ul>
+              <div class="team-border">
+                <h3 class="title">Ольга Иванова</h3>
+                <p class="profession">Frontend Developer</p>
+                <ul class="network list network-flex">
+                  <li>
+                    <a href="#" aria-label="Ссылка на Instagram" class="link"
+                      >Ins</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#" aria-label="Ссылка на Twitter" class="link">Tw</a>
+                  </li>
+                  <li>
+                    <a href="#" aria-label="Ссылка на Facebook" class="link"
+                      >FB</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#" aria-label="Ссылка на LinkedIn" class="link"
+                      >LIn</a
+                    >
+                  </li>
+                </ul>
+              </div>
             </li>
             <li>
               <img
+                class="image-block"
                 src="./img/team/robert.jpg"
                 alt="Андрей Шевченко"
                 width="270"
                 height="260"
               />
-              <h3 class="title">Андрей Шевченко</h3>
-              <p class="profession">Marketing</p>
-              <ul class="network list network-flex">
-                <li>
-                  <a href="#" aria-label="Ссылка на Instagram" class="link"
-                    >Ins</a
-                  >
-                </li>
-                <li>
-                  <a href="#" aria-label="Ссылка на Twitter" class="link">Tw</a>
-                </li>
-                <li>
-                  <a href="#" aria-label="Ссылка на Facebook" class="link"
-                    >FB</a
-                  >
-                </li>
-                <li>
-                  <a href="#" aria-label="Ссылка на LinkedIn" class="link"
-                    >LIn</a
-                  >
-                </li>
-              </ul>
+              <div class="team-border">
+                <h3 class="title">Андрей Шевченко</h3>
+                <p class="profession">Marketing</p>
+                <ul class="network list network-flex">
+                  <li>
+                    <a href="#" aria-label="Ссылка на Instagram" class="link"
+                      >Ins</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#" aria-label="Ссылка на Twitter" class="link">Tw</a>
+                  </li>
+                  <li>
+                    <a href="#" aria-label="Ссылка на Facebook" class="link"
+                      >FB</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#" aria-label="Ссылка на LinkedIn" class="link"
+                      >LIn</a
+                    >
+                  </li>
+                </ul>
+              </div>
             </li>
             <li>
               <img
+                class="image-block"
                 src="./img/team/martin.jpg"
                 alt="Иван Николаев"
                 width="270"
                 height="260"
               />
-              <h3 class="title">Иван Николаев</h3>
-              <p class="profession">UI Designer</p>
-              <ul class="network list network-flex">
-                <li>
-                  <a href="#" aria-label="Ссылка на Instagram" class="link"
-                    >Ins</a
-                  >
-                </li>
-                <li>
-                  <a href="#" aria-label="Ссылка на Twitter" class="link">Tw</a>
-                </li>
-                <li>
-                  <a href="#" aria-label="Ссылка на Facebook" class="link"
-                    >FB</a
-                  >
-                </li>
-                <li>
-                  <a href="#" aria-label="Ссылка на LinkedIn" class="link"
-                    >LIn</a
-                  >
-                </li>
-              </ul>
+              <div class="team-border">
+                <h3 class="title">Иван Николаев</h3>
+                <p class="profession">UI Designer</p>
+                <ul class="network list network-flex">
+                  <li>
+                    <a href="#" aria-label="Ссылка на Instagram" class="link"
+                      >Ins</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#" aria-label="Ссылка на Twitter" class="link">Tw</a>
+                  </li>
+                  <li>
+                    <a href="#" aria-label="Ссылка на Facebook" class="link"
+                      >FB</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#" aria-label="Ссылка на LinkedIn" class="link"
+                      >LIn</a
+                    >
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
