--- a/portfolio.html
+++ b/portfolio.html
@@ -87,7 +87,7 @@
               <li class="item">
                 <a href="#" class="link">
                   <img
-                    class="project-image"
+                    class="image-block"
                     src="./img/portfolio/project2.jpg"
                     alt="Проект2"
                     width="370"
