Adds hero bg-image and gradient, footer update

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
     <main>
       <!-- Hero -->
-      <div class="container hero-image">
+      <div class="hero-image">
         <section class="hero">
-          <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+          <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br> ДЛЯ ВАШЕГО БИЗНЕСА</h1>
           <button type="button" class="main-button">Заказать услугу</button>
         </section>
       </div>
@@ -416,8 +416,6 @@
           </div>
         </div>
       </div>
-
-      <p class="footer-copyright container">2020 | Developed by GoIT Students</p>
       
     </footer>
   </body>
