Adds features-icons

--- a/index.html
+++ b/index.html
@@ -59,52 +59,28 @@
       <section class="section features">
         <div class="container">
           <ul class="features list">
-            <li>
-              <img
-                src="./img/features/antenna.svg"
-                alt="Антенна"
-                width="70"
-                height="70"
-              />
+            <li class="features-item icon-antenna">
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li>
-              <img
-                src="./img/features/clock.svg"
-                alt="Часы"
-                width="70"
-                height="70"
-              />
+            <li class="features-item icon-clock">
               <h3 class="title">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
-              <img
-                src="./img/features/diagram.svg"
-                alt="Диаграмма"
-                width="70"
-                height="70"
-              />
+            <li class="features-item icon-diagram">
               <h3 class="title">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li>
-              <img
-                src="./img/features/astronaut.svg"
-                alt="Астронавт"
-                width="70"
-                height="70"
-              />
+            <li class="features-item icon-astonaut">
               <h3 class="title">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -170,20 +146,21 @@
                 <ul class="network list network-flex">
                   <li>
                     <a href="#" aria-label="Ссылка на Instagram" class="link"
-                      >Ins</a
+                      ><img src="./img/networks/instagram.svg" alt="Instagram"></a
                     >
                   </li>
                   <li>
-                    <a href="#" aria-label="Ссылка на Twitter" class="link">Tw</a>
+                    <a href="#" aria-label="Ссылка на Twitter" class="link">
+                      <img src="./img/networks/twitter.svg" alt="Twitter"></a>
                   </li>
                   <li>
                     <a href="#" aria-label="Ссылка на Facebook" class="link"
-                      >FB</a
+                      ><img src="./img/networks/facebook.svg" alt="Facebook"></a
                     >
                   </li>
                   <li>
                     <a href="#" aria-label="Ссылка на LinkedIn" class="link"
-                      >LIn</a
+                      ><img src="./img/networks/linkedin.svg" alt="Inkedin"></a
                     >
                   </li>
                 </ul>
@@ -203,20 +180,21 @@
                 <ul class="network list network-flex">
                   <li>
                     <a href="#" aria-label="Ссылка на Instagram" class="link"
-                      >Ins</a
+                      ><img src="./img/networks/instagram.svg" alt="Instagram"></a
                     >
                   </li>
                   <li>
-                    <a href="#" aria-label="Ссылка на Twitter" class="link">Tw</a>
+                    <a href="#" aria-label="Ссылка на Twitter" class="link">
+                      <img src="./img/networks/twitter.svg" alt="Twitter"></a>
                   </li>
                   <li>
                     <a href="#" aria-label="Ссылка на Facebook" class="link"
-                      >FB</a
+                      ><img src="./img/networks/facebook.svg" alt="Facebook"></a
                     >
                   </li>
                   <li>
                     <a href="#" aria-label="Ссылка на LinkedIn" class="link"
-                      >LIn</a
+                      ><img src="./img/networks/linkedin.svg" alt="Inkedin"></a
                     >
                   </li>
                 </ul>
@@ -236,20 +214,21 @@
                 <ul class="network list network-flex">
                   <li>
                     <a href="#" aria-label="Ссылка на Instagram" class="link"
-                      >Ins</a
+                      ><img src="./img/networks/instagram.svg" alt="Instagram"></a
                     >
                   </li>
                   <li>
-                    <a href="#" aria-label="Ссылка на Twitter" class="link">Tw</a>
+                    <a href="#" aria-label="Ссылка на Twitter" class="link">
+                      <img src="./img/networks/twitter.svg" alt="Twitter"></a>
                   </li>
                   <li>
                     <a href="#" aria-label="Ссылка на Facebook" class="link"
-                      >FB</a
+                      ><img src="./img/networks/facebook.svg" alt="Facebook"></a
                     >
                   </li>
                   <li>
                     <a href="#" aria-label="Ссылка на LinkedIn" class="link"
-                      >LIn</a
+                      ><img src="./img/networks/linkedin.svg" alt="Inkedin"></a
                     >
                   </li>
                 </ul>
@@ -269,20 +248,22 @@
                 <ul class="network list network-flex">
                   <li>
                     <a href="#" aria-label="Ссылка на Instagram" class="link"
-                      >Ins</a
+                      ><img src="./img/networks/instagram.svg" alt="Instagram"></a
                     >
                   </li>
                   <li>
-                    <a href="#" aria-label="Ссылка на Twitter" class="link">Tw</a>
+                    <a href="#" aria-label="Ссылка на Twitter" class="link">
+                      <img src="./img/networks/twitter.svg" alt="Twitter">
+                    </a>
                   </li>
                   <li>
                     <a href="#" aria-label="Ссылка на Facebook" class="link"
-                      >FB</a
+                      ><img src="./img/networks/facebook.svg" alt="Facebook"></a
                     >
                   </li>
                   <li>
                     <a href="#" aria-label="Ссылка на LinkedIn" class="link"
-                      >LIn</a
+                      ><img src="./img/networks/linkedin.svg" alt="Inkedin"></a
                     >
                   </li>
                 </ul>
@@ -300,14 +281,14 @@
             <li>
               <a href="#">
                 <img
-                  src="./img/clients/logo1.svg"
+                  src="./img/clients/Client 1.svg"
                   alt="Компания1"
                   width="44"
                   height="49"
                 />
               </a>
             </li>
-            <li>
+            <li class="icon-client2">
               <a href="#">
                 <img
                   src="./img/clients/logo2.svg"
