--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
               <li class="item">
                 <a href="#" class="link">
                   <img
-                    class="project-image"
+                    class="image-block"
                     src="./img/portfolio/project1.jpg"
                     alt="Проект1"
                     width="370"
@@ -107,7 +107,7 @@
               <li class="item">
                 <a href="#" class="link">
                   <img
-                    class="project-image"
+                    class="image-block"
                     src="./img/portfolio/project3.jpg"
                     alt="Проект3"
                     width="370"
@@ -127,7 +127,7 @@
               <li class="item">
                 <a href="#" class="link">
                   <img
-                    class="project-image"
+                    class="image-block"
                     src="./img/portfolio/project4.jpg"
                     alt="Проект4"
                     width="370"
@@ -147,7 +147,7 @@
               <li class="item">
                 <a href="#" class="link">
                   <img
-                    class="project-image"
+                    class="image-block"
                     src="./img/portfolio/project5.jpg"
                     alt="Проект5"
                     width="370"
@@ -167,7 +167,7 @@
               <li class="item">
                 <a href="#" class="link">
                   <img
-                    class="project-image"
+                    class="image-block"
                     src="./img/portfolio/project6.jpg"
                     alt="Проект6"
                     width="370"
@@ -187,7 +187,7 @@
               <li class="item">
                 <a href="#" class="link">
                   <img
-                    class="project-image"
+                    class="image-block"
                     src="./img/portfolio/project7.jpg"
                     alt="Проект7"
                     width="370"
@@ -207,7 +207,7 @@
               <li class="item">
                 <a href="#" class="link">
                   <img
-                    class="project-image"
+                    class="image-block"
                     src="./img/portfolio/project8.jpg"
                     alt="Проект8"
                     width="370"
@@ -227,7 +227,7 @@
               <li class="item">
                 <a href="#" class="link">
                   <img
-                    class="project-image"
+                    class="image-block"
                     src="./img/portfolio/project9.jpg"
                     alt="Проект9"
                     width="370"
