--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
       <section class="section features">
         <div class="container">
           <ul class="features list">
-            <li class="features-item icon-antenna">
+            <li class="features-item">
+              
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по
@@ -144,14 +145,12 @@
                 <h3 class="title">Николай Кучеренко</h3>
                 <p class="profession">Product Designer</p>
                 <ul class="network list network-flex">
-                  <li>
-                    <a href="#" aria-label="Ссылка на Instagram" class="link"
-                      ><img src="./img/networks/instagram.svg" alt="Instagram"></a
-                    >
+                  <li class="icon-instagram">
+                    <a href="#" aria-label="Ссылка на Instagram" class="link"></a>
                   </li>
-                  <li>
+                  <li class="icon-instagram">
                     <a href="#" aria-label="Ссылка на Twitter" class="link">
-                      <img src="./img/networks/twitter.svg" alt="Twitter"></a>
+                      </a>
                   </li>
                   <li>
                     <a href="#" aria-label="Ссылка на Facebook" class="link"
@@ -280,26 +279,24 @@
           <ul class="list clients-flex">
             <li>
               <a href="#">
-                <img
-                  src="./img/clients/Client 1.svg"
-                  alt="Компания1"
-                  width="44"
-                  height="49"
-                />
+                <svg>
+                  <use href=""></use>
+                </svg>
               </a>
             </li>
             <li class="icon-client2">
               <a href="#">
-                <img
+                svg
+                <!--<img
                   src="./img/clients/logo2.svg"
                   alt="Компания2"
                   width="40"
                   height="52"
-                />
+                />-->
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="#"">
                 <img
                   src="./img/clients/logo3.svg"
                   alt="Компания3"
