Adds svg-antenna

--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
         <div class="container">
           <ul class="features list">
             <li class="features-item">
-              
+              <div>
+                <svg>
+                  <use href="./img/sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по
