Adds nav icons, features icons

--- a/index.html
+++ b/index.html
@@ -35,12 +35,19 @@
 
         <ul class="contacts-nav list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
+            <a href="mailto:info@devstudio.com" class="link">
+              <svg class="icon-envelope">
+                <use href="./img/sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link">
+              <svg class="icon-smartphone">
+                <use href="./img/sprite.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -60,32 +67,45 @@
         <div class="container">
           <ul class="features list">
             <li class="features-item">
-              <div>
-                <svg>
-                  <use href="./img/sprite.svg#icon-antenna"></use>
-                </svg>
-              </div>
+              <svg class="icon-features">
+                <use href="./img/sprite.svg#icon-antenna"></use>
+              </svg>
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="features-item icon-clock">
+            <li class="features-item">
+              <div>
+                <svg class="icon-features">
+                  <use href="./img/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="title">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="features-item icon-diagram">
+            <li class="features-item">
+              <div>
+                <svg class="icon-features">
+                  <use href="./img/sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="title">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="features-item icon-astonaut">
+            <li class="features-item">
+              <div>
+                <svg class="icon-features">
+                  <use href="./img/sprite.svg#icon-astonaut"></use>
+                </svg>
+              </div>
               <h3 class="title">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -284,59 +304,43 @@
             <li>
               <a href="#">
                 <svg>
-                  <use href=""></use>
+                  <use href="./img/sprite.svg#icon-logo1"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-client2">
               <a href="#">
-                svg
-                <!--<img
-                  src="./img/clients/logo2.svg"
-                  alt="Компания2"
-                  width="40"
-                  height="52"
-                />-->
+                <svg>
+                  <use href="./img/sprite.svg#icon-logo2"></use>
+                </svg>
               </a>
             </li>
             <li>
               <a href="#"">
-                <img
-                  src="./img/clients/logo3.svg"
-                  alt="Компания3"
-                  width="41"
-                  height="42"
-                />
+                <svg>
+                  <use href="./img/sprite.svg#icon-logo3"></use>
+                </svg>
               </a>
             </li>
             <li>
               <a href="#">
-                <img
-                  src="./img/clients/logo4.svg"
-                  alt="Компания4"
-                  width="80"
-                  height="42"
-                />
+                <svg>
+                  <use href="./img/sprite.svg#icon-logo4"></use>
+                </svg>
               </a>
             </li>
             <li>
               <a href="#">
-                <img
-                  src="./img/clients/logo5.svg"
-                  alt="Компания5"
-                  width="59"
-                  height="47"
-                />
+                <svg>
+                  <use href="./img/sprite.svg#icon-logo5"></use>
+                </svg>
               </a>
             </li>
             <li>
               <a href="#">
-                <img
-                  src="./img/clients/logo6.svg"
-                  alt="Компания6"
-                  width="88"
-                  height="45"
-                />
+                <svg>
+                  <use href="./img/sprite.svg#icon-logo6"></use>
+                </svg>
               </a>
             </li>
           </ul>
