Adds portfolio nav icons and network icons (team 1)

--- a/index.html
+++ b/index.html
@@ -169,22 +169,33 @@
                 <h3 class="title">Николай Кучеренко</h3>
                 <p class="profession">Product Designer</p>
                 <ul class="network list network-flex">
-                  <li class="icon-instagram">
-                    <a href="#" aria-label="Ссылка на Instagram" class="link"></a>
+                  <li class="item-network">
+                    <a href="#" aria-label="Ссылка на Instagram" class="link">
+                      <svg class="icon-network">
+                        <use href="./img/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="icon-instagram">
+                  <li class="item-network">
                     <a href="#" aria-label="Ссылка на Twitter" class="link">
-                      </a>
+                      <svg class="icon-network">
+                        <use href="./img/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li>
-                    <a href="#" aria-label="Ссылка на Facebook" class="link"
-                      ><img src="./img/networks/facebook.svg" alt="Facebook"></a
-                    >
+                  <li class="item-network">
+                    <a href="#" aria-label="Ссылка на Facebook" class="link">
+                      <svg class="icon-network">
+                        <use href="./img/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li>
-                    <a href="#" aria-label="Ссылка на LinkedIn" class="link"
-                      ><img src="./img/networks/linkedin.svg" alt="Inkedin"></a
-                    >
+                  <li class="item-network">
+                    <a href="#" aria-label="Ссылка на LinkedIn" class="link">
+                      <svg class="icon-network">
+                        <use href="./img/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
