--- a/portfolio.html
+++ b/portfolio.html
@@ -286,28 +286,28 @@
             <ul class="network list footer-network">
               <li class="item-network">
                 <a href="#" aria-label="Ссылка на Instagram" class="link">
-                  <svg class="icon-network">
+                  <svg class="icon-footer">
                     <use href="./img/sprite.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="item-network">
                 <a href="#" aria-label="Ссылка на Twitter" class="link">
-                  <svg class="icon-network">
+                  <svg class="icon-footer">
                     <use href="./img/sprite.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="item-network">
                 <a href="#" aria-label="Ссылка на Facebook" class="link">
-                  <svg class="icon-network">
+                  <svg class="icon-footer">
                     <use href="./img/sprite.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="item-network">
                 <a href="#" aria-label="Ссылка на LinkedIn" class="link">
-                  <svg class="icon-network">
+                  <svg class="icon-footer">
                     <use href="./img/sprite.svg#icon-linkedin"></use>
                   </svg>
                 </a>
