Adds footer updates

--- a/index.html
+++ b/index.html
@@ -416,8 +416,8 @@
           <div class="join">
             <h4 class="footer-sign join-margin">Присоединяйтесь</h4>
             <ul class="network list footer-network">
-              <li class="item-network">
-                <a href="#" aria-label="Ссылка на Instagram" class="link">
+              <li>
+                <a href="#" aria-label="Ссылка на Instagram" class="link item-network">
                   <svg class="icon-footer ">
                     <use href="./img/sprite.svg#icon-instagram"></use>
                   </svg>
